welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: unclosed character literal
var fini:Boolean = 'false'
                         ^BDRBuggle:31: error: unclosed character literal
  } else {fini='true'}
                    ^BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini:Boolean = 'false'
^BDRBuggle:1: error: unclosed character literal
var fini:Boolean = 'false'
                         ^BDRBuggle:1: error: ';' expected but something found.
var fini:Boolean = 'false'
                         ^BDRBuggle:31: error: unclosed character literal
  } else {fini='true'}
                    ^